snapshots/issues/closed_as_duplicate.snap
---
source: src/events/issues.rs
info:
  author_name_length: 8
  colour_hex: "#A6E3A1"
  description_length: 0
  title_length: 60
---
embeds:
  - author:
      icon_url: "https://avatars.githubusercontent.com/u/58985301?v=4"
      name: sgoudham
      url: "https://github.com/sgoudham"
    color: 10937249
    description: ~
    title: "[catppuccin-rfc/polybar] Issue closed as duplicate: #26 test"
    url: "https://github.com/catppuccin-rfc/polybar/issues/26"
